"""
RAG LLM gRPC Client
Handles response generation with FAQ context
"""
import grpc
import logging
from typing import Dict, Any

logger = logging.getLogger(__name__)

class RAGLLMClient:
    """Client for RAG LLM service communication"""
    
    def __init__(self, host: str = "ragllm_service", port: int = 5000):
        self.endpoint = f"{host}:{port}"
        logger.info(f"Initialized RAGLLMClient with endpoint: {self.endpoint}")
    
    async def generate_response(
        self, 
        query: str, 
        context: str, 
        tenant_id: str, 
        model: str = "gpt-3.5-turbo"
    ) -> Dict[str, Any]:
        """
        Generate response using LLM with FAQ context
        """
        try:
            # TODO: Implement actual gRPC call to RAG LLM
            logger.info(f"Generating LLM response with model {model}...")
            
            # Mock response - replace with actual gRPC call
            return {
                "response": f"Based on the information available, {query[:50]}...",
                "model_used": model,
                "context_used": len(context) > 0,
                "confidence": 0.85
            }
            
        except Exception as e:
            logger.error(f"RAG LLM call failed: {str(e)}")
            return {
                "response": "I apologize, but I'm having trouble generating a response right now.",
                "error": str(e),
                "confidence": 0.0
            }
